docs: tokens docs
